# VRCParamLink

./: README.md
backend/: .env.example  package.json  tsconfig.json
backend/src/: index.ts
backend/src/lib/: param-rate-tracker.ts  param-throttle-buffer.ts  protocol.ts  redis-client.ts  room-errors.ts  room-helpers.ts  room-manager.ts  room-types.ts  ws-handlers.ts  ws-messaging.ts  ws-state.ts  ws-types.ts
electron-app/: README.md  components.json  electron-builder.yml  package.json  svelte.config.mjs  tsconfig.json  tsconfig.node.json  tsconfig.web.json
electron-app/src/main/: index.ts
electron-app/src/main/lib/: OSC.ts  app-state.ts  auto-updater.ts  backend-client.ts  driver-manager.ts  osc-sync.ts  tracker-bridge.ts  tracker-pipe-client.ts  virtual-hmd.ts
electron-app/src/preload/: index.d.ts  index.ts
electron-app/src/renderer/: index.html
electron-app/src/renderer/src/: App.svelte  app.css  main.ts
electron-app/src/renderer/src/lib/: utils.ts
electron-app/src/renderer/src/lib/components/: AppHeader.svelte  DisplayNameCard.svelte  FilterSettingsCard.svelte  HeroCard.svelte  InputSyncSettingsCard.svelte  OwnerControlsCard.svelte  ParameterListCard.svelte  ParticipantsCard.svelte  RoomActionsCard.svelte  RoomScreen.svelte  RoomSummaryCard.svelte  SyncStatusCard.svelte  TrackingSyncSettingsCard.svelte  WelcomeScreen.svelte
native-windows/: Cargo.toml
native-windows/driver-vrcpl/: CMakeLists.txt  build.bat
native-windows/driver-vrcpl/src/: driver.cpp
native-windows/driver-vrcpl/vrcpl/: driver.vrdrivermanifest
native-windows/driver-vrcpl/vrcpl/resources/settings/: default.vrsettings
native-windows/src/: calibration.rs  main.rs  math_utils.rs  openvr_bridge.rs  types.rs  vrserver_check.rs
pdr/: VRCPARAMLINK_PDR.md  v2_PDR.md  v3_PDR.md  v4_PDR.md  v5_PDR.md
shared/src/: constants.ts  events.ts  index.ts  types.ts
(+1 files in other folders)
